Fix word-wrap in IE11

--- a/imports/components/fields/Panel.scss
+++ b/imports/components/fields/Panel.scss
@@ -54,4 +54,5 @@
 .body-text {
   font-weight: 300;
   margin-bottom: 20px;
+  width: 100%;
 }
